--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -158,6 +158,9 @@ a.button span {
 #download-tar-gz span {
   background: transparent url(../images/tar-gz-icon.png) 12px 50% no-repeat;
 }
+#download-tar-xz span {
+  background: transparent url(../images/tar-xz-icon.png) 12px 50% no-repeat;
+}
 #view-on-github span {
   background: transparent url(../images/octocat-icon.png) 12px 50% no-repeat;
 }
